<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="signUpViewModel"
            type="com.example.praisewhale.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pale"
        tools:context=".signup.UserNameFragment">

        <TextView
            android:id="@+id/tv_title"
            style="@style/signUpText"
            android:layout_marginStart="40dp"
            android:layout_marginTop="65dp"
            android:text="@string/title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title2"
            style="@style/signUpText"
            android:text="@string/title2"
            app:layout_constraintStart_toEndOf="@id/tv_title"
            app:layout_constraintTop_toTopOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_title3"
            style="@style/signUpText"
            android:text="@string/title3"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_title4"
            style="@style/signUpText"
            android:text="@string/title4"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_title3"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <View
            android:id="@+id/underline"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:background="@color/sand_yellow"
            app:layout_constraintEnd_toEndOf="@id/tv_title4"
            app:layout_constraintStart_toStartOf="@id/tv_title4"
            app:layout_constraintTop_toBottomOf="@id/tv_title4" />

        <TextView
            android:id="@+id/tv_title5"
            style="@style/signUpText"
            android:text="@string/title5"
            app:layout_constraintStart_toEndOf="@id/tv_title4"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_title6"
            style="@style/signUpText"
            android:text="@string/title6"
            app:layout_constraintStart_toStartOf="@id/tv_title3"
            app:layout_constraintTop_toBottomOf="@id/underline" />

        <ImageView
            android:id="@+id/img_progress_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/whalename_ic_progress"
            app:layout_constraintBottom_toBottomOf="@id/img_progress"
            app:layout_constraintEnd_toStartOf="@id/img_progress"
            app:layout_constraintTop_toTopOf="@id/img_progress"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/img_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/nickname_img_progress_2"
            app:layout_constraintEnd_toStartOf="@id/img_progress2"
            app:layout_constraintTop_toTopOf="@id/tv_title2"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/img_progress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="51dp"
            android:src="@drawable/nickname_ic_progress"
            app:layout_constraintBottom_toBottomOf="@id/img_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_progress"
            tools:ignore="ContentDescription" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_nickname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="51dp"
                    android:hint="@string/hint_nickname"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="7"
                    android:padding="16dp"
                    android:text="@={signUpViewModel.userName}"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    visibleResetButton="@{signUpViewModel.userName}"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginVertical="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/btn_reset_text"
                    android:onClick="@{() -> signUpViewModel.resetUserName()}"
                    app:layout_constraintBottom_toBottomOf="@id/et_nickname"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="@id/et_nickname"
                    app:layout_constraintTop_toTopOf="@id/et_nickname"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_now_length"
                    nickNameColor="@{signUpViewModel.userName}"
                    nickNameCount="@{signUpViewModel.userName}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/brown"
                    android:textSize="13sp"
                    android:visibility="@{signUpViewModel.isValid? View.VISIBLE : View.INVISIBLE}"
                    app:layout_constraintBottom_toBottomOf="@id/tv_max_length"
                    app:layout_constraintEnd_toStartOf="@id/tv_max_length"
                    app:layout_constraintTop_toTopOf="@id/tv_max_length" />

                <TextView
                    android:id="@+id/tv_max_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_length"
                    android:textColor="@color/brown_grey"
                    android:textSize="13sp"
                    android:visibility="@{signUpViewModel.isValid? View.VISIBLE : View.INVISIBLE}"
                    app:layout_constraintEnd_toEndOf="@id/et_nickname"
                    app:layout_constraintTop_toBottomOf="@id/et_nickname" />

                <TextView
                    android:id="@+id/tv_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_warning"
                    android:textColor="@color/dark_peach"
                    android:visibility="@{signUpViewModel.isValid? View.INVISIBLE : View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="@id/tv_max_length"
                    app:layout_constraintEnd_toEndOf="@id/et_nickname"
                    app:layout_constraintStart_toStartOf="@id/et_nickname"
                    app:layout_constraintTop_toTopOf="@id/tv_max_length" />

                <Button
                    android:id="@+id/btn_check"
                    style="?android:attr/borderlessButtonStyle"
                    validation="@{signUpViewModel.userName}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/btn_next"
                    android:letterSpacing="-0.05"
                    android:lineSpacingExtra="-2sp"
                    android:paddingVertical="18dp"
                    android:text="@string/next"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/et_nickname"
                    app:layout_constraintStart_toStartOf="@id/et_nickname"
                    app:layout_constraintTop_toBottomOf="@id/tv_max_length" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>