<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/start_bg"
        tools:context=".signup.SignUpFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <ImageView
            android:id="@+id/img_start_whale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/start_img_whale"
            app:layout_constraintTop_toTopOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:background="@color/wheat"
                app:layout_constraintBottom_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintEnd_toEndOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="20sp"
                android:textColor="#3d352c"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title9"
                android:textSize="20sp"
                android:textColor="#3d352c"
                app:layout_constraintTop_toTopOf="@id/tv_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toEndOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title10"
                android:textSize="20sp"
                android:textColor="#3d352c"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title11"
                android:textSize="20sp"
                android:textColor="#3d352c"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/tv_title3"
                app:layout_constraintBottom_toBottomOf="@id/tv_title3"
                app:layout_constraintStart_toEndOf="@id/tv_title3" />

            <TextView
                android:id="@+id/tv_title5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title12"
                android:textSize="20sp"
                android:textColor="#3d352c"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/tv_title4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_next_actived"
            android:text="@string/start"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:letterSpacing="-0.05"
            android:lineSpacingExtra="-2sp"
            android:paddingVertical="18dp"
            android:layout_marginTop="69dp"
            android:layout_marginHorizontal="51dp"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/layout_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>